welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:3: error: value avance is not a member of Unit
avance();leveBrosse();droite()avance(2);droite();avance();gauche() 
                              ^